--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-helmet": "^6.1.0",
     "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.16",
-    "react-tilt": "^0.1.4"
+    "react-tilt": "^0.1.4",
+    "typewriter-effect": "^2.18.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
